fixed overflow hidden

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ html {
 
 body {
     height: 100%;
-    overflow: hidden;
+    /*overflow: hidden;*/
     font-family: 'Roboto', sans-serif;
     font-size: 1rem;
     display: grid;
